# rp4-demo

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE-AI.md  LICENSE-AI.tex  README.md  readme.ai.tex
cmake/: aarch64-none-elf.cmake
dsp/: djembe.dsp  echo.dsp  electric_guitar.dsp  freeverb.dsp  guitar_reverb.dsp  marimba.dsp  nylon_guitar.dsp  passthrough.dsp  stereo_volume.dsp  tone.dsp  violin.dsp  volume.dsp
dsp/fx/: chorus.dsp  compressor.dsp  delay_stereo.dsp  eq3.dsp  flanger.dsp  looper.dsp  overdrive.dsp  phaser.dsp  tremolo.dsp  tuner.dsp  wah.dsp
dsp/pm/: bowed_cello.dsp  clarinet.dsp  flute.dsp  guitar_amp.dsp  guitar_harmonics.dsp  ks_basic.dsp  ks_chromatic.dsp  steel_drum.dsp  string_quartet.dsp  tabla.dsp
firmware/: config.txt  tryboot.txt
lib/shell/: Shell.fsx
proof/: run_all.fsx
proof/certs/: allocator.txt  audio.txt  proc.txt
scripts/: ConfigDb.fs  boot.fsx  build-kodi.fsx  dumpifs.fsx  gen_config_module.fsx  kodi_defconfig  mkifs.fsx  seed_config.fsx  sqlhydra-config.toml  tsa.fsx
spec/: verify_allocator.fsx  verify_audio.fsx  verify_proc.fsx  verify_shim.c
src/apps/: audiomgr.cpp  btmgr.cpp  configsrv.cpp  console.cpp  displaymgr.cpp  drmmgr.cpp  emmcmgr.cpp  genetmgr.cpp  helloworld.cpp  httpmgr.cpp  lv2_amp.c  memfsmgr.cpp  shell.cpp  storagemgr.cpp  top.cpp  usbaudmgr.cpp
src/boot/: allocator.cpp  app_crt.cpp  boot.cpp  libcxx_baremetal.h  link.ld  start.S  vectors.S
src/config/: config.cppm
src/dsp/: dsp.cppm
src/hal/: hal.cppm
src/http/: http.cppm
src/libos/: close.c  isatty.c  lseek.c  open.c  qnxmicro_syscall.h  read.c  write.c
src/proc/: proc.cppm
src/shim/: audioeffectx.h  dash_config.h  libc_shim.c  libc_shim_cxx.cpp  tusb_config.h
src/shim/include/: paths.h
src/shim/include/arch/: cc.h
src/shim/include/sys/: mman.h  stat.h  wait.h
test/: sample.dsf  test_audiomgr.cpp
tools/doxygen/: baseline.txt  ratchet.fsx
